{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 1306,
  "lineage": "9b56e0d2-352b-2080-c2cc-add13d530fd9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jayamal_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7623f0516833886",
            "arn": "arn:aws:ec2:us-east-1:343218189535:elastic-ip/eipalloc-0e7623f0516833886",
            "domain": "vpc",
            "id": "eipalloc-0e7623f0516833886",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-228-74.compute-1.amazonaws.com",
            "public_ip": "34.198.228.74",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Jayamal Elastic IP",
              "Owner": "Jayamal"
            },
            "tags_all": {
              "Name": "Jayamal Elastic IP",
              "Owner": "Jayamal"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:343218189535:instance/i-0f7b57fb88b672022",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7b57fb88b672022",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01f24c863bc5c53e7"
              }
            ],
            "primary_network_interface_id": "eni-01f24c863bc5c53e7",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "public_ip": "44.200.140.112",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c242df44b2b28179",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-05b2cc534cf9f1fd2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f89ccba18c6da37",
            "tags": {
              "Name": "bastion_host",
              "Owner": "Jayamal"
            },
            "tags_all": {
              "Name": "bastion_host",
              "Owner": "Jayamal"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b2cc534cf9f1fd2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "i-0f7b57fb88b672022",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.jayamal_bastion_sg",
            "aws_subnet.jayamal_ob_public_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "order_book_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:343218189535:instance/i-02ac69881922a83bd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ac69881922a83bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dcc89bf80126ecd3"
              }
            ],
            "primary_network_interface_id": "eni-0dcc89bf80126ecd3",
            "private_dns": "ip-10-0-2-184.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.184",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-025ce36a5f38d51a2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-066d71ed388be94bd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b3b9565e5aa2c04",
            "tags": {
              "Name": "order-book-app",
              "Owner": "Jayamal"
            },
            "tags_all": {
              "Name": "order-book-app",
              "Owner": "Jayamal"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066d71ed388be94bd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "i-02ac69881922a83bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.jayamal_app_sg",
            "aws_subnet.jayamal_ob_private_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jayamal_int_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218189535:internet-gateway/igw-0ce335cd15f27f763",
            "id": "igw-0ce335cd15f27f763",
            "owner_id": "343218189535",
            "region": "us-east-1",
            "tags": {
              "Author": "Jayamal",
              "Name": "Jayamal Internet Gateway"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "Jayamal Internet Gateway"
            },
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jayamal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:loadbalancer/net/jayamal-lb/a6ab28478969c5eb",
            "arn_suffix": "net/jayamal-lb/a6ab28478969c5eb",
            "dns_name": "jayamal-lb-a6ab28478969c5eb.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:343218189535:loadbalancer/net/jayamal-lb/a6ab28478969c5eb",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "jayamal-lb",
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f89ccba18c6da37"
              }
            ],
            "subnets": [
              "subnet-01f89ccba18c6da37"
            ],
            "tags": {
              "Author": "Jayamal",
              "Name": "jayamal_lb"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "jayamal_lb"
            },
            "vpc_id": "vpc-066660dc4e899801b",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:loadbalancer/net/jayamal-lb/a6ab28478969c5eb"
          },
          "dependencies": [
            "aws_subnet.jayamal_ob_public_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jayamal_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:listener/net/jayamal-lb/a6ab28478969c5eb/33f2bb3880b77755",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-80/0f99b67746c738df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:343218189535:listener/net/jayamal-lb/a6ab28478969c5eb/33f2bb3880b77755",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:loadbalancer/net/jayamal-lb/a6ab28478969c5eb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {
              "Author": "Jayamal",
              "Name": "jayamal_lb_listner"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "jayamal_lb_listner"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:listener/net/jayamal-lb/a6ab28478969c5eb/33f2bb3880b77755"
          },
          "dependencies": [
            "aws_lb.jayamal_lb",
            "aws_lb_target_group.jayamal_app_tg_80",
            "aws_subnet.jayamal_ob_public_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jayamal_lb_listner_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:listener/net/jayamal-lb/a6ab28478969c5eb/8e0ef81d88f92f45",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-8080/b2763a0f000abc1b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:343218189535:listener/net/jayamal-lb/a6ab28478969c5eb/8e0ef81d88f92f45",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:loadbalancer/net/jayamal-lb/a6ab28478969c5eb",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {
              "Author": "Jayamal",
              "Name": "jayamal_lb_listner_8080"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "jayamal_lb_listner_8080"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:listener/net/jayamal-lb/a6ab28478969c5eb/8e0ef81d88f92f45"
          },
          "dependencies": [
            "aws_lb.jayamal_lb",
            "aws_lb_target_group.jayamal_app_tg_8080",
            "aws_subnet.jayamal_ob_public_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jayamal_app_tg_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-80/0f99b67746c738df",
            "arn_suffix": "targetgroup/jayamal-app-tg-80/0f99b67746c738df",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-80/0f99b67746c738df",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jayamal-app-tg-80",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Author": "Jayamal",
              "Name": "jayamal_app_tg_80"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "jayamal_app_tg_80"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-80/0f99b67746c738df"
          },
          "dependencies": [
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jayamal_app_tg_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-8080/b2763a0f000abc1b",
            "arn_suffix": "targetgroup/jayamal-app-tg-8080/b2763a0f000abc1b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-8080/b2763a0f000abc1b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jayamal-app-tg-8080",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Author": "Jayamal",
              "Name": "jayamal_app_tg-8080"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "jayamal_app_tg-8080"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-8080/b2763a0f000abc1b"
          },
          "dependencies": [
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jayamal_lb_attach_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-80/0f99b67746c738df-20251226161440290900000005",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-80/0f99b67746c738df",
            "target_id": "i-02ac69881922a83bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.order_book_app",
            "aws_key_pair.ec2_key_pair",
            "aws_lb_target_group.jayamal_app_tg_80",
            "aws_security_group.jayamal_app_sg",
            "aws_subnet.jayamal_ob_private_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jayamal_lb_attach_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-8080/b2763a0f000abc1b-20251226161440308600000006",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:343218189535:targetgroup/jayamal-app-tg-8080/b2763a0f000abc1b",
            "target_id": "i-02ac69881922a83bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.order_book_app",
            "aws_key_pair.ec2_key_pair",
            "aws_lb_target_group.jayamal_app_tg_8080",
            "aws_security_group.jayamal_app_sg",
            "aws_subnet.jayamal_ob_private_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jayamal_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7623f0516833886",
            "association_id": "eipassoc-0e254364fc7908489",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03f206051169fd659",
            "network_interface_id": "eni-0ea957e61b2ceed2e",
            "private_ip": "10.0.1.151",
            "public_ip": "34.198.228.74",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01f89ccba18c6da37",
            "tags": {
              "Author": "Jayamal",
              "Name": "Jayamal NAT GW"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "Jayamal NAT GW"
            },
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.jayamal_elastic_ip",
            "aws_subnet.jayamal_ob_public_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jayamal_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218189535:route-table/rtb-02a3ad8ee2eb7d834",
            "id": "rtb-02a3ad8ee2eb7d834",
            "owner_id": "343218189535",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03f206051169fd659",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Jayamal",
              "Name": "Jayamal Private Route Table"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "Jayamal Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "rtb-02a3ad8ee2eb7d834",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.jayamal_elastic_ip",
            "aws_nat_gateway.jayamal_nat_gw",
            "aws_subnet.jayamal_ob_public_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jayamal_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218189535:route-table/rtb-0a44d7943d6e611a1",
            "id": "rtb-0a44d7943d6e611a1",
            "owner_id": "343218189535",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce335cd15f27f763",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Jayamal",
              "Name": "Jayamal Route Table"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "Jayamal Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "rtb-0a44d7943d6e611a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.jayamal_int_gw",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jayamal_private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d39469eee3b04c7",
            "region": "us-east-1",
            "route_table_id": "rtb-02a3ad8ee2eb7d834",
            "subnet_id": "subnet-06b3b9565e5aa2c04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.jayamal_elastic_ip",
            "aws_nat_gateway.jayamal_nat_gw",
            "aws_route_table.jayamal_private_route_table",
            "aws_subnet.jayamal_ob_private_subnet",
            "aws_subnet.jayamal_ob_public_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jayamal_public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7cc25d0b0c8c8bd",
            "region": "us-east-1",
            "route_table_id": "rtb-0a44d7943d6e611a1",
            "subnet_id": "subnet-01f89ccba18c6da37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.jayamal_int_gw",
            "aws_route_table.jayamal_public_route_table",
            "aws_subnet.jayamal_ob_public_subnet",
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jayamal_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218189535:security-group/sg-066d71ed388be94bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066d71ed388be94bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 16443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 16443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "jayamal_app_sg",
            "name_prefix": "",
            "owner_id": "343218189535",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Jayamal",
              "Name": "jayamal_app_sg"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "jayamal_app_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "sg-066d71ed388be94bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jayamal_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218189535:security-group/sg-05b2cc534cf9f1fd2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b2cc534cf9f1fd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jayamal-bastion-sg",
            "name_prefix": "",
            "owner_id": "343218189535",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Jayamal",
              "Name": "jayamal_bastion_sg"
            },
            "tags_all": {
              "Author": "Jayamal",
              "Name": "jayamal_bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "sg-05b2cc534cf9f1fd2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jayamal_ob_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218189535:subnet/subnet-06b3b9565e5aa2c04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b3b9565e5aa2c04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218189535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jayamal Private Subnet",
              "Owner": "jayamal"
            },
            "tags_all": {
              "Name": "Jayamal Private Subnet",
              "Owner": "jayamal"
            },
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "subnet-06b3b9565e5aa2c04",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jayamal_ob_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218189535:subnet/subnet-01f89ccba18c6da37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f89ccba18c6da37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218189535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jayamal Public Subnet",
              "Owner": "jayamal"
            },
            "tags_all": {
              "Name": "Jayamal Public Subnet",
              "Owner": "jayamal"
            },
            "vpc_id": "vpc-066660dc4e899801b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "subnet-01f89ccba18c6da37",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.jayamal_ob_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jayamal_ob_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218189535:vpc/vpc-066660dc4e899801b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7be370b587ad9e1",
            "default_route_table_id": "rtb-041200065ae49be68",
            "default_security_group_id": "sg-0bfb1e51bf39e2b7a",
            "dhcp_options_id": "dopt-0e0da2f2504099bde",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066660dc4e899801b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041200065ae49be68",
            "owner_id": "343218189535",
            "region": "us-east-1",
            "tags": {
              "Name": "jayamal_ob_vpc",
              "Owner": "jayamal"
            },
            "tags_all": {
              "Name": "jayamal_ob_vpc",
              "Owner": "jayamal"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343218189535",
            "id": "vpc-066660dc4e899801b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}